implemented App button

--- a/conf/hpcpfGUI.conf
+++ b/conf/hpcpfGUI.conf
@@ -2,13 +2,15 @@
 	"port" : 8080,
 	"FXgen" : {
 		"win"    : "",
-		"darwin" : "open /Applications/FXgen.app",
-		"linux"  : "FXgen"
+		"darwin" : "open -a /Applications/FXgen.app",
+		"linux"  : "FXgen",
+		"extension" : ".obj;.stl"
 	},
 	"PDI" : {
 		"win"    : "pdi",
 		"darwin" : "pdi",
-		"linux"  : "pdi"
+		"linux"  : "pdi",
+		"extension" : ".pdi"
 	},
 	"KVTools" : {
 		"win"    : "start http://localhost:8082",
