--- a/conf/hpcpfGUI.conf
+++ b/conf/hpcpfGUI.conf
@@ -1,19 +1,19 @@
 {
 	"port" : 8080,
 	"FXgen" : {
-		"win"    : "",
+		"win32"    : "",
 		"darwin" : "open -a /Applications/FXgen.app",
 		"linux"  : "FXgen",
 		"extension" : ".obj;.stl"
 	},
 	"PDI" : {
-		"win"    : "pdi",
+		"win32"    : "pdi",
 		"darwin" : "pdi",
 		"linux"  : "pdi",
 		"extension" : ".pdi"
 	},
 	"KVTools" : {
-		"win"    : "start http://localhost:8082",
+		"win32"    : "start http://localhost:8082",
 		"darwin" : "open http://localhost:8082",
 		"linux"  : "xdg-open http://localhost:8082"
 	}
